# gmail_access

./: .gitignore  README.md  email_parsing_strategy.py  get_apple_receipts_emails.py  get_zelle_payment_emails.py  gmail_api.py  google_apis.py  item.py  item_email.py  main.py  parse_format_1.py  parse_format_2.py  poc_apple_receipts_v2.py  pyproject.toml  reading_email.py  receipt.py  receipt_email.py  search_email.py  send_email.py
tests/: test_item.py  test_receipt.py
