[project]
name = "gamail-access"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "google-api-python-client>=2.163.0",
    "google-auth>=2.38.0",
    "google-auth-oauthlib>=1.2.1",
    "notebook>=7.3.2",
    "pytest>=8.3.5",
]
